<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Object Connoisseur</string>
    <string name="settings_header">Settings</string>
    <string name="settings_explanation">Set up host and port for server</string>
    <string name="default_host">192.168.11.4</string>
    <string name="default_port">7890</string>
    <string name="start_button_text">Connect!</string>
    <string name="invalid_host_or_port">Invalid host or port!</string>
    <string name="object_flow_header">Objects</string>
    <string name="connection_created">Connection created, starting initialization...</string>
    <string name="connection_initialized">Connection initialized. Waiting for content!</string>
    <string name="couldnt_connect">Couldn\'t connect!</string>
    <string name="disconnected">Disconnected!</string>
    <string name="connection_state_unknown">Connection state unknown.</string>
    <string name="connection_state_disconnected">Disconnected.</string>
    <string name="connection_state_connected">Connected.</string>
    <string name="connection_state_error">Error occurred</string>
</resources>
